# ragflow

./: README.md  WHITELABEL_CHANGES.md  pyproject.toml
api/: ragflow_server.py
docker/: .env  README.md  docker-compose-base.yml  docker-compose-gpu.yml  docker-compose.yml
docs/: README.md
docs/references/: http_api_reference.md
helm/: Chart.yaml  values.yaml
intergrations/: README.md
intergrations/chatgpt-on-wechat/plugins/: README.md
intergrations/extension_chrome/: README.md  manifest.json  popup.html
sdk/python/: README.md  pyproject.toml
web/: package.json
web/src/: conf.json
web/src/components/api-service/chat-overview-modal/: backend-service-api.tsx
web/src/components/api-service/embed-modal/: index.tsx
web/src/components/embed-dialog/: index.tsx
web/src/constants/: common.ts
web/src/layouts/: next-header.tsx
web/src/layouts/components/right-toolbar/: index.tsx
web/src/locales/: en.ts  zh-traditional.ts  zh.ts
web/src/pages/chat/chat-id-modal/: index.tsx
web/src/pages/flow/flow-id-modal/: index.tsx
web/src/pages/flow/hooks/: use-open-document.ts
web/src/pages/home/: banner.tsx
